<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">payjp-checkout-sample</string>
    <string name="checkout_title">Checkout V2 サンプル</string>
    <string name="backend_url_label">サンプルサーバーURL</string>
    <string name="backend_url_hint">http://10.0.2.2:3000</string>
    <string name="fetch_products">商品一覧を取得</string>
    <string name="products_section">商品を選択</string>
    <string name="start_checkout">Checkout V2 で支払う</string>
    <string name="result_title">結果</string>
    <string name="result_success">決済が完了しました！</string>
    <string name="result_cancel">決済がキャンセルされました</string>
    <string name="back">戻る</string>
    <string name="product_empty">商品が登録されていません</string>
    <string name="select_product_prompt">商品を選択してください</string>
    <string name="error_invalid_url">無効なURLです</string>
    <string name="error_empty_url">サーバーURLを入力してください</string>
    <string name="error_fetch_products">商品一覧の取得に失敗しました</string>
    <string name="error_create_session">Checkout Session の作成に失敗しました</string>
    <string name="error_parse_response">レスポンスの解析に失敗しました</string>
    <string name="error_network">通信エラーが発生しました</string>
</resources>
